# alert-usefulness-impaired-telemetry

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: impairment_adversarial_suppression.yaml  impairment_alert_flood.yaml  impairment_delay.yaml  impairment_loss.yaml  impairment_noise.yaml  synthetic_baseline.yaml
data/processed/: empire_mimikatz_logonpasswords_events.csv
data/raw/: README.md
docs/data/: empire_mimikatz_extraction_summary.md  empire_mimikatz_logonpasswords_inspection.md  empire_mimikatz_telemetry_validation_summary.md  first_mordor_scenario_selection.md
docs/datasets/: cicids2018_notes.md  lanl_notes.md  mordor_notes.md
docs/design/: concept_note.md  dataset_adapter_interface.md  metric_families.md  mordor_belief_saturation_options.md  mordor_event_aggregation_design.md  (+3 more)
experiments/: exp01_synthetic_separation.py  exp02_impairment_sweep.py  exp03_mordor_adapter.py
scripts/: extract_mordor_empire_mimikatz.py  inspect_mordor_belief_usefulness.py  make_mordor_paper_figures.py  run_exp01.sh  run_mordor_belief_usefulness_experiment.py  run_mordor_belief_weight_sensitivity.py  run_mordor_event_aggregation_sensitivity.py  run_mordor_impairment_experiment.py  run_sweep.sh  validate_mordor_extracted_telemetry.py
tests/: test_belief.py  test_datasets.py  test_impairments.py  test_imports.py  test_incident_state.py  test_metrics.py  test_mordor_belief_usefulness_experiment.py  test_mordor_extractor.py  test_mordor_impairment_experiment.py  test_mordor_validation.py  test_reporting.py  test_telemetry.py  test_visualization.py
(+74 files in other folders)
